samples/_failures_safe/1761273357_593794_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52cc3931.c: In function ‘main’:
./samples/SAFE/__tmp_52cc3931.c:139:46: error: expected ‘;’ at end of input
  139 |     for (size_t i = 0; i < input_chunks.count
      |                                              ^
      |                                              ;
./samples/SAFE/__tmp_52cc3931.c:139:5: error: expected declaration or statement at end of input
  139 |     for (size_t i = 0; i < input_chunks.count
      |     ^~~
